@@ -105,8 +105,6 @@ attlist.field &=
   [ a:defaultValue = "0" ] attribute tree_invisible { "0" | "1" }?
 attlist.field &= attribute mode { text }?
 attlist.field &=
-  [ a:defaultValue = "0" ] attribute completion { "0" | "1" }?
-attlist.field &=
   [ a:defaultValue = "0" ] attribute invisible { "0" | "1" }?
 attlist.field &= attribute sum { text }?
 attlist.field &= attribute key { text }?
